@@ -26,7 +26,6 @@ import java.time.OffsetDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.zip.ZipInputStream;
 import org.apache.commons.lang3.ArrayUtils;
 import org.apache.commons.lang3.StringUtils;
@@ -137,7 +136,7 @@ public class ReportLogic extends AbstractExecutableLogic<ReportTO> {
     @PreAuthorize("hasRole('" + IdRepoEntitlement.REPORT_LIST + "')")
     @Transactional(readOnly = true)
     public List<ReportTO> list() {
-        return reportDAO.findAll().stream().map(binder::getReportTO).collect(Collectors.toList());
+        return reportDAO.findAll().stream().map(binder::getReportTO).toList();
     }
 
     @PreAuthorize("hasRole('" + IdRepoEntitlement.REPORT_READ + "')")
@@ -255,7 +254,7 @@ public class ReportLogic extends AbstractExecutableLogic<ReportTO> {
         long count = reportExecDAO.count(report, before, after);
 
         List<ExecTO> result = reportExecDAO.findAll(report, before, after, pageable).stream().
-                map(reportExec -> binder.getExecTO(reportExec)).collect(Collectors.toList());
+                map(reportExec -> binder.getExecTO(reportExec)).toList();
 
         return new SyncopePage<>(result, pageable, count);
     }
@@ -264,7 +263,7 @@ public class ReportLogic extends AbstractExecutableLogic<ReportTO> {
     @Override
     public List<ExecTO> listRecentExecutions(final int max) {
         return reportExecDAO.findRecent(max).stream().
-                map(reportExec -> binder.getExecTO(reportExec)).collect(Collectors.toList());
+                map(reportExec -> binder.getExecTO(reportExec)).toList();
     }
 
     @PreAuthorize("hasRole('" + IdRepoEntitlement.REPORT_DELETE + "')")
