@@ -253,7 +253,7 @@ public class AnyObjectRepoExtImpl extends AbstractAnyRepoExt<AnyObject> implemen
     @Transactional(propagation = Propagation.REQUIRES_NEW, readOnly = true)
     @Override
     public Collection<String> findAllGroupKeys(final AnyObject anyObject) {
-        return findAllGroups(anyObject).stream().map(Group::getKey).collect(Collectors.toList());
+        return findAllGroups(anyObject).stream().map(Group::getKey).toList();
     }
 
     @Transactional(propagation = Propagation.REQUIRES_NEW, readOnly = true)
@@ -269,7 +269,7 @@ public class AnyObjectRepoExtImpl extends AbstractAnyRepoExt<AnyObject> implemen
     @Transactional(readOnly = true)
     @Override
     public Collection<String> findAllResourceKeys(final String key) {
-        return findAllResources(authFind(key)).stream().map(ExternalResource::getKey).collect(Collectors.toList());
+        return findAllResources(authFind(key)).stream().map(ExternalResource::getKey).toList();
     }
 
     @Override
