@@ -25,7 +25,6 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.syncope.common.lib.AnyOperations;
 import org.apache.syncope.common.lib.Attr;
@@ -130,7 +129,7 @@ public class ConnObjectUtils {
                 }
 
                 return attrTO;
-            }).collect(Collectors.toList()));
+            }).toList());
         }
 
         return connObjectTO;
